# trellis

./: .gitignore  LICENSE  README.md  conftest.py  logger.config.json  pyproject.toml
trellis/: __init__.py  dag.py  llm.py  node.py
trellis/tests/: data.txt  test_dag.py  test_dag_execute.py  test_llm.py  test_node.py
trellis/utils/: constants.py  generate.py  status.py
trellis_dag/: __init__.py  dag.py  llm.py  node.py
trellis_dag/tests/: test_dag.py  test_dag_execute.py  test_llm.py  test_node.py
trellis_dag/utils/: analyzer.py  constants.py
